Update overall UI

--- a/frontend/.streamlit/config.toml
+++ b/frontend/.streamlit/config.toml
@@ -1,3 +1,13 @@
 [server]
 port = 8080
 headless = true
+runOnSave = true
+
+[theme]
+base = "dark"
+
+[client]
+toolbarMode = "viewer"
+
+[runner]
+fastReruns = true
